[package]
authors = ["Martin Ždila <martin.zdila@freemap.sk>"]
categories = ["external-ffi-bindings", "compression", "science"]
description = "Low-level FFI bindings to Esri's LERC C API"
documentation = "https://docs.rs/lerc-sys"
edition = "2024"
keywords = ["lerc", "ffi", "bindings", "geospatial", "compression"]
license = "Apache-2.0"
name = "lerc-sys"
readme = "README.md"
repository = "https://github.com/FreemapSlovakia/lerc-sys"
rust-version = "1.85.0"
version = "0.1.2"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
glob = "0.3"

[features]
default = []
